--- a/public/polymer/package.json
+++ b/public/polymer/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.1.0",
     "@polymer/test-fixture": "^4.0.2",
+    "polymer-cli": "^1.9.11",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
