--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,9 +52,11 @@ akka {
 # Play mailer
 play.mailer {
 
-  host=localhost
-  port = 25
-  mock = true
+  host="smtp.gmail.com"
+  port = 465
+  ssl = yes
+  user = "teamorderandchaos@gmail.com"
+  password = "Orderandchaos1"
 }
 
 # Security Filter Configuration - Content Security Policy
