--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -41,7 +41,7 @@ silhouette {
   # Facebook provider
   facebook.authorizationURL="https://graph.facebook.com/v2.3/oauth/authorize"
   facebook.accessTokenURL="https://graph.facebook.com/v2.3/oauth/access_token"
-  facebook.redirectURL="http://localhost:9000/authenticate/facebook"
+  facebook.redirectURL="http://orderachaos.herokuapp.com/authenticate/facebook"
   facebook.clientID=""
   facebook.clientID=${?FACEBOOK_CLIENT_ID}
   facebook.clientSecret=""
@@ -51,7 +51,7 @@ silhouette {
   # Google provider
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
-  google.redirectURL="http://localhost:9000/authenticate/google"
+  google.redirectURL="http://orderachaos.herokuapp.com/authenticate/google"
   google.clientID="1002214545177-5m949cqki94prulqotuvu0hh7kpus6gl.apps.googleusercontent.com"
   google.clientID=${?GOOGLE_CLIENT_ID}
   google.clientSecret="Xy06oqZWMf_M5bcFATtJ1G4z"
@@ -61,7 +61,7 @@ silhouette {
   # VK provider
   vk.authorizationURL="http://oauth.vk.com/authorize"
   vk.accessTokenURL="https://oauth.vk.com/access_token"
-  vk.redirectURL="http://localhost:9000/authenticate/vk"
+  vk.redirectURL="http://orderachaos.herokuapp.com/authenticate/vk"
   vk.clientID=""
   vk.clientID=${?VK_CLIENT_ID}
   vk.clientSecret=""
@@ -72,7 +72,7 @@ silhouette {
   twitter.requestTokenURL="https://twitter.com/oauth/request_token"
   twitter.accessTokenURL="https://twitter.com/oauth/access_token"
   twitter.authorizationURL="https://twitter.com/oauth/authenticate"
-  twitter.callbackURL="http://localhost:9000/authenticate/twitter"
+  twitter.callbackURL="http://orderachaos.herokuapp.com/authenticate/twitter"
   twitter.consumerKey=""
   twitter.consumerKey=${?TWITTER_CONSUMER_KEY}
   twitter.consumerSecret=""
@@ -82,7 +82,7 @@ silhouette {
   xing.requestTokenURL="https://api.xing.com/v1/request_token"
   xing.accessTokenURL="https://api.xing.com/v1/access_token"
   xing.authorizationURL="https://api.xing.com/v1/authorize"
-  xing.callbackURL="http://localhost:9000/authenticate/xing"
+  xing.callbackURL="http://orderachaos.herokuapp.com/authenticate/xing"
   xing.consumerKey=""
   xing.consumerKey=${?XING_CONSUMER_KEY}
   xing.consumerSecret=""
@@ -90,11 +90,11 @@ silhouette {
 
   # Yahoo provider
   yahoo.providerURL="https://me.yahoo.com/"
-  yahoo.callbackURL="http://localhost:9000/authenticate/yahoo"
+  yahoo.callbackURL="http://orderachaos.herokuapp.com/authenticate/yahoo"
   yahoo.axRequired={
     "fullname": "http://axschema.org/namePerson",
     "email": "http://axschema.org/contact/email",
     "image": "http://axschema.org/media/image/default"
   }
-  yahoo.realm="http://localhost:9000"
+  yahoo.realm="http://orderachaos.herokuapp.com"
 }
