--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,7 +65,7 @@ play.filters.headers {
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' *.fbcdn.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com * data:;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com * data:;"
-  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'unsafe-inline' 'unsafe-eval' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ cdnjs.cloudflare.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'unsafe-inline' 'unsafe-eval' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js cdnjs.cloudflare.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://orderachaos.herokuapp.com twitter.com *.xing.com;"
 }
 
